[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/Square.png" type="Texture" id=1]
[ext_resource path="res://Assets/Circle.png" type="Texture" id=2]
[ext_resource path="res://Levels/PauseMenu.gd" type="Script" id=3]
[ext_resource path="res://Checkpoints.gd" type="Script" id=7]
[ext_resource path="res://PlayerContainer.gd" type="Script" id=8]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 0, 0, 25, 0, 25, 25, 0, 25 )

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 0, 0, 25, 0, 25, 25, 0, 25 )

[sub_resource type="TileSet" id=3]
0/name = "Square.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 25, 25 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 1 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "Square.png 1"
1/texture = ExtResource( 1 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 50, 0, 25, 25 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 2 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0

[node name="Level" type="Node2D"]

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -2000.0
margin_top = -1000.0
margin_right = 8000.0
margin_bottom = 9000.0
color = Color( 0.0901961, 0.0431373, 0.67451, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Platforms" type="TileMap" parent="."]
z_index = 1
tile_set = SubResource( 3 )
cell_size = Vector2( 25, 25 )
collision_layer = 2
collision_mask = 5
format = 1

[node name="UI" type="CanvasLayer" parent="."]

[node name="HUD" type="Control" parent="UI"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="UI/HUD"]
modulate = Color( 0.74902, 0.760784, 0.313726, 1 )
position = Vector2( 30, 20 )
scale = Vector2( 0.02, 0.02 )
texture = ExtResource( 2 )

[node name="Score" type="Label" parent="UI/HUD"]
margin_left = 43.334
margin_top = 7.904
margin_right = 71.423
margin_bottom = 27.904
rect_scale = Vector2( 2, 2 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseMenu" type="Control" parent="UI"]
pause_mode = 2
visible = false
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="UI/PauseMenu"]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0.141176, 0.141176, 0.141176, 0.211765 )

[node name="Save" type="Button" parent="UI/PauseMenu"]
margin_left = 429.0
margin_top = 200.0
margin_right = 512.0
margin_bottom = 220.0
rect_scale = Vector2( 2, 2 )
text = "Save Game"

[node name="Load" type="Button" parent="UI/PauseMenu"]
margin_left = 429.0
margin_top = 300.0
margin_right = 512.0
margin_bottom = 320.0
rect_scale = Vector2( 2, 2 )
text = "Load Game"

[node name="Quit" type="Button" parent="UI/PauseMenu"]
margin_left = 429.0
margin_top = 400.0
margin_right = 512.0
margin_bottom = 420.0
rect_scale = Vector2( 2, 2 )
text = "Quit Game"

[node name="Coins" type="Node2D" parent="."]

[node name="Enemies" type="Node2D" parent="."]

[node name="Checkpoints" type="Node2D" parent="."]
script = ExtResource( 7 )

[node name="PlayerContainer" type="Node2D" parent="."]
script = ExtResource( 8 )

[node name="StartingPosition" type="Node2D" parent="PlayerContainer"]

[connection signal="pressed" from="UI/PauseMenu/Save" to="UI/PauseMenu" method="_on_Save_pressed"]
[connection signal="pressed" from="UI/PauseMenu/Load" to="UI/PauseMenu" method="_on_Load_pressed"]
[connection signal="pressed" from="UI/PauseMenu/Quit" to="UI/PauseMenu" method="_on_Quit_pressed"]
